WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
268031
[iOS] Embedded twitter video controls are too tiny and don't prevent scrolling in fullscreen
https://bugs.webkit.org/show_bug.cgi?id=268031
Summary
[iOS] Embedded twitter video controls are too tiny and don't prevent scrollin...
Jer Noble
Reported
2024-01-24 13:55:03 PST
[iOS] Embedded twitter video controls are too tiny and don't prevent scrolling in fullscreen
Attachments
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2024-01-24 13:55:14 PST
<
rdar://problem/121473410
>
Jer Noble
Comment 2
2024-01-24 13:57:54 PST
Pull request:
https://github.com/WebKit/WebKit/pull/23193
EWS
Comment 3
2024-01-25 10:46:39 PST
Committed
273519@main
(37100c16885a): <
https://commits.webkit.org/273519@main
> Reviewed commits have been landed. Closing PR #23193 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug