[iOS] Embedded twitter video controls are too tiny and don't prevent scrolling in fullscreen https://bugs.webkit.org/show_bug.cgi?id=268031 rdar://121473410

Reviewed by Eric Carlson.

Add a quirk to disable element fullscreen for twitter.com embeds.

* Source/WebCore/page/Quirks.cpp:
(WebCore::Quirks::isEmbedDomain const):
(WebCore::Quirks::shouldDisableElementFullscreenQuirk const):
* Source/WebCore/page/Quirks.h:

Canonical link: https://commits.webkit.org/273519@main