Source/WebCore/page/Quirks.h
@@ -188,6 +188,7 @@ public:
 private:
     bool needsQuirks() const;
     bool isDomain(const String&) const;
+    bool isEmbedDomain(const String&) const;
 
 #if ENABLE(TOUCH_EVENTS)
     bool isAmazon() const;
